Steps 6 - 9 of the UI improvements

--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,7 @@
   </head>
   <body class="ts-body ts-theme-dark">
     <?!= include('views/partials/navbar'); ?>
+    <div id="ts-toast-container" class="ts-toast-container" aria-live="polite" aria-atomic="true"></div>
     <main class="ts-container ts-container--fluid">
       <?!= include('views/partials/dashboard'); ?>
       <?!= include('views/partials/contracts'); ?>
