--- a/views/partials/ratepreview.html
+++ b/views/partials/ratepreview.html
@@ -28,7 +28,11 @@
     </div>
   </div>
 
-  <div id="rate-preview-empty" class="ts-note">Select a contract and enter a rate change to generate a preview.</div>
+  <div id="rate-preview-empty" class="ts-empty-state">
+    <div class="ts-empty-state__icon">📈</div>
+    <p class="ts-empty-state__title">Model a rate change</p>
+    <p class="ts-empty-state__text">Select a contract and enter a new hourly rate or percentage to see the impact.</p>
+  </div>
 
   <div id="rate-preview-content" style="display:none;">
     <div class="rate-preview-overview">
